Changed styling to avoid overlapping #371

--- a/src/FlounderDropdown/flounderDropdown.css
+++ b/src/FlounderDropdown/flounderDropdown.css
@@ -21,6 +21,10 @@
 
         letter-spacing:     0;
 
+        min-height:         calc( var( --inputHeight ) - ( 2 * var( --borderWidth ) ) );
+        display:            flex;
+        align-items:        center;
+
         &:focus
         {
             outline:    none;
@@ -128,11 +132,10 @@
 
     .selectedDisplayed
     {
-        display:        flex;
-        align-items:    center;
+        display:        block;
 
+        flex-grow:      1;
         box-sizing:     border-box;
-        height:         calc( var( --inputHeight ) - ( 2 * var( --borderWidth ) ) );
 
         padding-left:   var( --spacing-2 );
         padding-right:  calc( var( --spacing-1 ) + var( --iconSize )  + var( --spacing-1 ) );
@@ -170,10 +173,10 @@
             left:           0;
             right:          0;
 
-            min-height:     var( --spacing-5 );
+            min-height:     calc( var( --inputHeight ) - ( 2 * var( --borderWidth ) ) );
 
-            padding-top:    calc( ( var( --inputHeightMultiTag ) - var( --line-height-m ) ) / 2 );
-            padding-bottom: calc( ( var( --inputHeightMultiTag ) - var( --line-height-m ) ) / 2 );
+            padding-top:    calc( ( var( --inputHeightMultiTag ) - var( --line-height-l ) ) / 2 );
+            padding-bottom: calc( ( var( --inputHeightMultiTag ) - var( --line-height-l ) ) / 2 );
         }
     }
 
